Correct the selection of the base->pizza on mobile

--- a/pages.css
+++ b/pages.css
@@ -418,6 +418,7 @@ button {
     flex: 1;
     opacity: 0.90;
     font-family: 'Amatic SC', cursive;
+    text-transform: uppercase;
     font-size: 2vw;
     background-image: none;
     text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em white;
